<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/bottomBar"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvHi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/hi_huy"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/eat_and_order"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/tvHi"
                    app:layout_constraintTop_toBottomOf="@id/tvHi"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/man"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription,MissingConstraints" />

                <EditText
                    android:id="@+id/edt_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:autofillHints="name"
                    android:background="@drawable/back_ground_edit"
                    android:drawableStart="@drawable/search_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:hint="Search"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@id/tv" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:layout_constraintTop_toBottomOf="@id/edt_search">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/shopping"
                        app:lottie_repeatMode="reverse" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:text="@string/free_ship"
                        android:textColor="@color/purple_200"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@id/lottie"
                        app:layout_constraintTop_toTopOf="@id/lottie"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/tv_order_now"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_50sdp"
                        android:layout_marginBottom="@dimen/_25sdp"
                        android:background="@drawable/back_ground_oder"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/order_now"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/lottie"
                        app:layout_constraintEnd_toEndOf="@id/lottie"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constraint" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_categories"
                    app:layout_constraintTop_toBottomOf="@id/tv_categories" />

                <TextView
                    android:id="@+id/tv_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/popular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rcv_category" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_categories"
                    app:layout_constraintTop_toBottomOf="@id/tv_popular" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

<!--        <meow.bottomnavigation.MeowBottomNavigation
            android:id="@+id/meowNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff4b3a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:mbn_backgroundBottomColor="#ff6f00"
            app:mbn_circleColor="@color/white"
            app:mbn_countBackgroundColor="@color/black"
            app:mbn_selectedIconColor="#ff6f00" />-->
                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:id="@+id/bottomBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.bottomappbar.BottomAppBar
                        android:id="@+id/appBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        app:fabCradleMargin="@dimen/_5sdp"
                        app:fabCradleRoundedCornerRadius="@dimen/_40sdp"
                        app:fabCradleVerticalOffset="@dimen/_2sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="10">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="vertical"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:src="@drawable/home_24" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/home" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:src="@drawable/info_24" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/info_home" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="vertical">

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:src="@drawable/support_24" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/support_home" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="vertical"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:src="@drawable/settings_24"
                                    tools:ignore="ContentDescription" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/home" />

                            </LinearLayout>
                        </LinearLayout>
                    </com.google.android.material.bottomappbar.BottomAppBar>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floating_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#ff4b3a"
                        android:elevation="@dimen/_5sdp"
                        android:src="@drawable/shopping_cart_24"
                        app:elevation="@dimen/_3sdp"
                        app:layout_anchor="@id/appBar"
                        tools:ignore="ContentDescription" />

                </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>